<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/floating_widget_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/emerald_3"
    android:padding="8dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/move_button"
        android:src="@drawable/move_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/boss_base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:text="@string/boss_base" />

        <TextView
            android:id="@+id/boss_base_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:textColor="@color/black"
            android:text="@string/boss_base_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/boss_multiplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:text="@string/boss_multiplier"/>

        <TextView
            android:id="@+id/boss_multiplier_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:textColor="@color/black"
            android:text="@string/boss_multiplier_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/boss_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:text="@string/boss_score" />

        <TextView
            android:id="@+id/boss_score_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:textColor="@color/black"
            android:text="@string/boss_score_content"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_boss_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magic_btn"
        android:layout_margin="8dp"
        style="@style/SimpleButton" />

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_preview"
        android:visibility="gone" />

</LinearLayout>
