<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        app:layout_constraintBottom_toTopOf="@+id/boss_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/boss_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/border"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintBottom_toTopOf="@+id/guideline">

        <TextView
            android:id="@+id/label_boss_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:text="@string/label_boss_button"
            android:gravity="start" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_boss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_btn"
            android:contentDescription="@string/button_boss_description"
            android:layout_margin="8dp"
            style="@style/SimpleButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/golem_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TextView
            android:id="@+id/label_golem_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:text="@string/label_golem_button"
            android:gravity="start" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_golem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_btn"
            android:contentDescription="@string/button_golem_description"
            android:layout_margin="8dp"
            style="@style/SimpleButton" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_btn"
        android:layout_margin="8dp"
        style="@style/SimpleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/golem_section" />

</androidx.constraintlayout.widget.ConstraintLayout>

