<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/floating_widget_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/emerald_3"
    android:padding="8dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/move_button"
        android:src="@drawable/move_icon" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="2">

        <!-- First Row -->
        <TextView
            android:id="@+id/golem_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_top"
            android:gravity="center"
            android:text="@string/golem_base" />

        <TextView
            android:id="@+id/golem_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_top"
            android:text="@string/golem_base" />

        <TextView
            android:id="@+id/golem_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_top"
            android:text="@string/golem_base" />

        <TextView
            android:id="@+id/golem_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_top"
            android:text="@string/golem_base" />

        <TextView
            android:id="@+id/golem_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_top"
            android:text="@string/golem_base" />

        <!-- Second Row -->
        <TextView
            android:id="@+id/nb_golem_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_bottom"
            android:text="@string/golem_base_content" />

        <TextView
            android:id="@+id/nb_golem_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_bottom"
            android:text="@string/golem_base_content" />

        <TextView
            android:id="@+id/nb_golem_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_bottom"
            android:text="@string/golem_base_content" />

        <TextView
            android:id="@+id/nb_golem_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_bottom"
            android:text="@string/golem_base_content" />

        <TextView
            android:id="@+id/nb_golem_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/border_thin_bottom"
            android:text="@string/golem_base_content" />

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/golem_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:text="@string/golem_score" />

        <TextView
            android:id="@+id/golem_score_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:textColor="@color/black"
            android:text="@string/golem_score_content"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_golem_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magic_btn"
        android:layout_margin="8dp"
        style="@style/SimpleButton" />

    <ImageView
        android:id="@+id/img_preview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/img_preview"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_preview_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/img_preview"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_preview_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/img_preview"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_preview_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/img_preview"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_preview_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/img_preview"
        android:visibility="gone" />

</LinearLayout>